--- a/style.css
+++ b/style.css
@@ -18,19 +18,27 @@ body{
     background-color: rgb(164, 174, 249);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 50vh;
+    /* align-items: center; */
+    padding: 20px;
     width: 400px;
 }
 
+.welcome-main > .wel-form{
+    display: flex;  
+}
+.wel-form > button{
+    width: 20% !important;
+    margin-left: 10px;
+}
+
 input{
-    width: 70%;
+    width: 80%;
     border-radius: 5px;
     padding: 8px 0px;
 }
 
 button{
-    width: 70%;
+    width: 60%;
     border-radius: 5px;
     padding: 5px 0px;
 }
